--- a/dashboard.html
+++ b/dashboard.html
@@ -13,7 +13,7 @@
 
 
     <!-- <div class="ui top demo sidebar ui segment visible"  style="margin: 0"> -->
-        <div class="ui top fixed demo menu">
+        <div class="ui top fixed demo menu" style="z-index: 200 !important">
         <div class="item">
             <img src="public/images/logo.png">
         </div>
@@ -32,27 +32,29 @@
         </div>
     <!-- </div> -->
 </div>
-    <div class="ui top attached segment pushable" style="margin: 0">
+    <!-- <div class="ui top attached segment pushable" style="margin: 0"> -->
+        <!-- <div style="position: fixed"> -->
 
-        <div class="ui visible left thin vertical sidebar menu">
-            <a class="item height-same">
-            </a>
-            <a class="item">
-                <i class="home icon"></i>
-                Home
-            </a>
-            <a class="item">
-                <i class="block layout icon"></i>
-                Topics
-            </a>
-            <a class="item">
-                <i class="smile icon"></i>
-                Friends
-            </a>
-            <a class="item">
-                <i class="calendar icon"></i>
-                History
-            </a>
+            <div class="ui visible left thin vertical sidebar menu">
+                <a class="item height-same">
+                </a>
+                <a class="item">
+                    <i class="home icon"></i>
+                    Home
+                </a>
+                <a class="item">
+                    <i class="block layout icon"></i>
+                    Topics
+                </a>
+                <a class="item">
+                    <i class="smile icon"></i>
+                    Friends
+                </a>
+                <a class="item">
+                    <i class="calendar icon"></i>
+                    History
+                </a>
+            <!-- </div> -->
         </div>
 
         <div class="pusher">
@@ -113,6 +115,6 @@
                 History
             </a>
         </div>
-    </div>
+    <!-- </div> -->
 
 </body>
